# WEengine

glfun/assets/shaders/: frag.frag  frag02.frag  frag03.frag  frag2.frag  frag_05.frag  frag_05_02.frag  frag_06_01.frag  frag_compat.frag  frag_pos_n_col.frag  s08_light.frag  s08_light.vert  s08_object.frag  s08_object.vert  s08_object_material.frag  s08_object_material.vert  (+12 more)
glfun/src/: hegeometry.c  hegeometry.h  hegl.h  hegl_util.c  hegl_util.h  hengine.c  hengine.h  learnopengl.c  learnopengl.h  main.c  play_01_triangle.c  play_01_triangle.h  play_02_rectangle.c  play_02_rectangle.h  play_03_two_triangle.c  play_03_two_triangle.h  play_04_shader.c  play_04_shader.h  play_05_texture.c  play_05_texture.h  play_06_math.c  play_06_math.h  play_07_camera.c  play_07_camera.h  play_08_color.c  play_08_color.h  play_09_lightmap.c  play_09_lightmap.h  play_10_basiclight.c  play_10_basiclight.h  play_11_loadmodel.c  play_11_loadmodel.h  play_12_loadgltf.c  play_12_loadgltf.h  stb.c
weengine/: CMakeLists.txt  TODO
weengine/assets/models/: pyramid.glb
weengine/assets/shaders/: default.vert  frag2.frag
weengine/game/: hoka.c  hoka.h  main.c  stb.c  wearray.c  wearray.h  weasset.c  weasset.h  wecamera.c  wecamera.h  wecomponent.h  weengine.c  weengine.h  wegeometry.c  wegeometry.h  wehash.h  wehashmap.c  wehashmap.h  wehashtable.h  weid.c  weid.h  wematerial.c  wematerial.h  wemesh.c  wemesh.h  wenode.c  wenode.h  weobject.c  weobject.h  werenderer.c  werenderer.h  wescene.c  wescene.h  wetest.c  wetransform.c  wetransform.h  weutil.c  weutil.h  weworld.c  weworld.h
